# nightwatch

./: CLAUDE.md  README.md  pyproject.toml
src/nightwatch/: __init__.py  app.py  db.py  process.py
src/nightwatch/hf/: __init__.py  client.py  format.py  models.py  recommend.py
src/nightwatch/screens/: __init__.py  confirm.py  explore.py  monitor.py  serve_model.py
tests/: test_app.py  test_db.py  test_process.py
